<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/card_bordas"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/textViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textViewItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descricao"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btnVerDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVer"
        android:layout_marginTop="8dp" />

</LinearLayout>