<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue_purble">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:layout_marginBottom="90dp"
        android:background="@drawable/texto_bordas"
        android:text="@string/EditarTitulo" />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/caixas_add"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="70dp"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/editTitulo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/Name"
            android:backgroundTint="@color/blue_water"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/caixas_add"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="70dp">

        <EditText
            android:id="@+id/editDescricao"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/Descricao"
            android:backgroundTint="@color/blue_water"/>
    </FrameLayout>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btnSalvar"
        android:backgroundTint="@color/green_light"/>
</LinearLayout>